ACABA PELO AMOR DE DEUS

--- a/src/br/com/visao/ContaAlterar.form
+++ b/src/br/com/visao/ContaAlterar.form
@@ -164,6 +164,9 @@
         <Component class="javax.swing.JTextField" name="jTdatavencimento">
         </Component>
         <Component class="javax.swing.JTextField" name="jTlimite">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTlimiteActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="jTidconta">
         </Component>
